--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -220,7 +220,7 @@ RejectedLeads As screen:
                     Y: =000
                     ZIndex: =2
 
-            ctnSearchBarSLS_3 As groupContainer.horizontalAutoLayoutContainer:
+            ctnSearchBarRS As groupContainer.horizontalAutoLayoutContainer:
                 DropShadow: =DropShadow.None
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
@@ -234,7 +234,7 @@ RejectedLeads As screen:
                 Y: =ctnSearchBarSLS_2.Height
                 ZIndex: =6
 
-                Label4_2 As label:
+                lblSortRS As label:
                     Align: =Align.Right
                     Color: =RGBA(116, 116, 116, 1)
                     Font: =Font.Arial
@@ -243,12 +243,12 @@ RejectedLeads As screen:
                     Text: ="Sort by column"
                     Width: |-
                         =//If(Parent.Width>500,Parent.Width/2.4,Parent.Width/3)
-                        Parent.Width-ComboBox1_1.Width-Icon1_1.Width-20
+                        Parent.Width-cboxSortRS.Width-iconSortRS.Width-20
                     X: =Parent.Width-Self.Width
                     Y: =10
                     ZIndex: =1
 
-                ComboBox1_1 As combobox:
+                cboxSortRS As combobox:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     ChevronBackground: =RGBA(255, 0, 0, 1)
                     ChevronHoverBackground: =Self.ChevronBackground
@@ -275,7 +275,7 @@ RejectedLeads As screen:
                     Width: =180
                     ZIndex: =2
 
-                Icon1_1 As icon.ArrowsUpDown:
+                iconSortRS As icon.ArrowsUpDown:
                     BorderColor: =RGBA(255, 0, 0, 1)
                     Color: =RGBA(255, 0, 0, 1)
                     Height: =40
@@ -288,13 +288,13 @@ RejectedLeads As screen:
                                 true
                             );
                                 Set(VarDownIcon,false);,*/
-                            Icon1_1.Icon = Icon.ArrowDown,
+                            iconSortRS.Icon = Icon.ArrowDown,
                             Set(
                                 VarUpperIcon,
                                 true
                             );
                             Set(VarDownIcon,false);,
-                            Icon1_1.Icon = Icon.ArrowUp,
+                            iconSortRS.Icon = Icon.ArrowUp,
                             Set(
                                 VarDownIcon,
                                 true
@@ -309,16 +309,16 @@ RejectedLeads As screen:
                     ZIndex: =3
 
             "glryLeadsRS As gallery.'BrowseLayout_Vertical_ThreeTextVariant_ver4.0'":
-                Height: =Parent.Height-ctnSearchBarSLS_2.Height-ctnSearchBarSLS_3.Height-20
+                Height: =Parent.Height-ctnSearchBarSLS_2.Height-ctnSearchBarRS.Height-20
                 Items: |-
                     =SortByColumns(Search(Sort(Filter(LeadInformations,//Email=User().Email  && 
-                    LeadStatus=Header&&Email=User().Email),'Created On',SortOrder.Descending),IntxtSearchBoxSLS_1.Text,"shlrf_contractnumber","shlrf_address","shlrf_buildingname","shlrf_zipcode","shlrf_leadtrackingnumber"),If(ComboBox1_1.Selected.Value="Created Date","createdon",ComboBox1_1.Selected.Value="QQ Team Name","shlrf_qqteamname",ComboBox1_1.Selected.Value="Mechanic Name","shlrf_mechanicname",ComboBox1_1.Selected.Value="Contract No.","shlrf_contractnumber",ComboBox1_1.Selected.Value="Lead Tracking No.","shlrf_leadtrackingnumber",ComboBox1_1.Selected.Value="Building Name","shlrf_buildingname",ComboBox1_1.Selected.Value="Address","shlrf_address",ComboBox1_1.Selected.Value="Lead Status","shlrf_leadstatus"),If(Icon1_1.Icon=Icon.ArrowDown,SortOrder.Descending,Icon1_1.Icon=Icon.ArrowUp,SortOrder.Ascending,SortOrder.Descending))
+                    LeadStatus=Header&&Email=User().Email),'Created On',SortOrder.Descending),IntxtSearchBoxSLS_1.Text,"shlrf_contractnumber","shlrf_address","shlrf_buildingname","shlrf_zipcode","shlrf_leadtrackingnumber"),If(cboxSortRS.Selected.Value="Created Date","createdon",cboxSortRS.Selected.Value="QQ Team Name","shlrf_qqteamname",cboxSortRS.Selected.Value="Mechanic Name","shlrf_mechanicname",cboxSortRS.Selected.Value="Contract No.","shlrf_contractnumber",cboxSortRS.Selected.Value="Lead Tracking No.","shlrf_leadtrackingnumber",cboxSortRS.Selected.Value="Building Name","shlrf_buildingname",cboxSortRS.Selected.Value="Address","shlrf_address",cboxSortRS.Selected.Value="Lead Status","shlrf_leadstatus"),If(iconSortRS.Icon=Icon.ArrowDown,SortOrder.Descending,iconSortRS.Icon=Icon.ArrowUp,SortOrder.Ascending,SortOrder.Descending))
                 Layout: =Layout.Vertical
                 TemplatePadding: =0
                 TemplateSize: =If(btnheaderRS.Text="Rejected Leads",240+htmltxtLeadCommentRS.Height)
                 Width: =If(Parent.Width>1000,Parent.Width,Parent.Width/1.05)
                 X: =20
-                Y: =ctnSearchBarSLS_3.Height+ctnSearchBarSLS_3.Y
+                Y: =ctnSearchBarRS.Height+ctnSearchBarRS.Y
                 ZIndex: =7
 
                 borderLeadsRS As rectangle:
