--- a/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/QuotedSOldLeads.fx.yaml
@@ -969,14 +969,14 @@ QuotedSOldLeads As screen:
                     Width: =40
                     ZIndex: =3
 
-    grpMenuSLS_2 As group:
+    grpMenuSoldLeads As group:
         Height: =5
         Width: =5
         X: =40
         Y: =80
         ZIndex: =4
 
-        ctnBackgroundMenuSLS_2 As groupContainer.manualLayoutContainer:
+        ctnBackgroundMenuSoldLeads As groupContainer.manualLayoutContainer:
             Fill: =RGBA(0, 0.19, 0.19, 0.19)
             Height: =Parent.Height-ctnHeaderDS.Height
             Visible: =varshowMenu
@@ -984,11 +984,11 @@ QuotedSOldLeads As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =2
 
-        "glryMenuBarSLS_2 As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
+        "glryMenuBarSoldLeads As gallery.'BrowseLayout_Vertical_OneTextOneImageVariant_ver4.0'":
             BorderColor: =RGBA(255, 255, 255, 1)
             BorderThickness: =1
             Fill: =RGBA(237, 237, 237, 1)
-            Height: =1.08*(CountRows(glryMenuBarSLS_2.AllItems)*(glryMenuBarSLS_2.TemplateHeight))
+            Height: =1.08*(CountRows(glryMenuBarSoldLeads.AllItems)*(glryMenuBarSoldLeads.TemplateHeight))
             Items: =Menu
             Layout: =Layout.Vertical
             ShowScrollbar: =false
@@ -999,7 +999,7 @@ QuotedSOldLeads As screen:
             Y: =ctnHeaderDS.Y+ctnHeaderDS.Height
             ZIndex: =3
 
-            ctnMenuSLS_2 As groupContainer.manualLayoutContainer:
+            ctnMenuSoldLeads As groupContainer.manualLayoutContainer:
                 DropShadow: =DropShadow.ExtraBold
                 Fill: =RGBA(255, 255, 255, 1)
                 Height: =80
