--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -856,7 +856,7 @@ DashboardScreen As screen:
             Y: =480
             ZIndex: =8
 
-    grpinprogressconfirmationLS_2 As group:
+    grprefreshpopupDS As group:
         Height: =5
         Width: =5
         X: =40
