--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -796,7 +796,7 @@ DashboardScreen As screen:
             Y: =20
             ZIndex: =6
 
-    grpinprogressconfirmationLS_1 As group:
+    grpincentivepopupDS As group:
         Height: =5
         Width: =5
         X: =40
@@ -840,7 +840,7 @@ DashboardScreen As screen:
             Y: =imginfoLS_2.Y+ imginfoLS_2.Height+2
             ZIndex: =6
 
-        btnnoLS_2 As button:
+        btnnoDS As button:
             BorderColor: =RGBA(75, 125, 6, 1)
             Fill: =RGBA(54, 176, 75, 1)
             Font: =Font.Arial
