--- a/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/DashboardScreen.fx.yaml
@@ -203,7 +203,7 @@ DashboardScreen As screen:
                     Y: =//Parent.Y
                     ZIndex: =3
 
-                Image2_2 As image:
+                imgmsgquotedlead As image:
                     Height: =30
                     Image: =email
                     Visible: =If(CountRows(Filter(LeadChats,'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.No  && (LeadInformationLID.LeadStatus="Quoted")))>0,true,false)
