--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -697,7 +697,7 @@ LeadListScreen As screen:
             Y: =lblmsgLS.Y+ lblmsgLS.Height+10
             ZIndex: =7
 
-    GrpLoderLS As group:
+    grpwaitcursorLS As group:
         Height: =5
         Width: =5
         X: =60
