--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -138,7 +138,7 @@ LeadListScreen As screen:
                         Width: =200
                         ZIndex: =3
 
-                    Container8 As groupContainer.manualLayoutContainer:
+                    ctndistrictandsearchfilterLS As groupContainer.manualLayoutContainer:
                         AlignInContainer: =AlignInContainer.End
                         FillPortions: =0
                         Height: =100
