--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -193,7 +193,7 @@ LeadListScreen As screen:
                         RadiusTopRight: =20
                         ZIndex: =6
 
-                        Label4 As label:
+                        lblsortcolumnLS As label:
                             Color: =RGBA(116, 116, 116, 1)
                             FontWeight: =FontWeight.Semibold
                             Text: ="Sort column by order"
@@ -202,21 +202,7 @@ LeadListScreen As screen:
                             Y: =10
                             ZIndex: =1
 
-                        Dropdown1 As dropdown:
-                            BorderColor: =Header.SHRed
-                            ChevronBackground: =Header.SHRed
-                            ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
-                            HoverFill: =//RGBA(186, 202, 226, 1)
-                            Items: =["Ascending","Descending"]
-                            PressedFill: =//RGBA(0, 18, 107, 1)
-                            SelectionFill: =Header.SHRed
-                            Visible: =false
-                            Width: =150
-                            X: =326
-                            Y: =50
-                            ZIndex: =2
-
-                        Dropdown1_1 As dropdown:
+                        drpdwnsortcolumnLS As dropdown:
                             BorderColor: =Header.SHRed
                             ChevronBackground: =Header.SHRed
                             ChevronHoverBackground: =//ColorFade(RGBA(56, 96, 178, 1), -20%)
@@ -363,7 +349,7 @@ LeadListScreen As screen:
                                         )
                                     )
                                 ),
-                              If(Dropdown1_1.Selected.Value="Created Date","createdon",Dropdown1_1.Selected.Value="QQ Team Name","shlrf_qqteamname",Dropdown1_1.Selected.Value="Mechanic Name","shlrf_mechanicname",Dropdown1_1.Selected.Value="Contract No.","shlrf_contractnumber",Dropdown1_1.Selected.Value="Lead Tracking No.","shlrf_leadtrackingnumber",Dropdown1_1.Selected.Value="Building Name","shlrf_buildingname",Dropdown1_1.Selected.Value="Address","shlrf_address",Dropdown1_1.Selected.Value="Lead Status","shlrf_leadstatus"),If(icnsortLS.Icon=Icon.ArrowDown,SortOrder.Descending,icnsortLS.Icon=Icon.ArrowUp,SortOrder.Ascending)
+                              If(drpdwnsortcolumnLS.Selected.Value="Created Date","createdon",drpdwnsortcolumnLS.Selected.Value="QQ Team Name","shlrf_qqteamname",drpdwnsortcolumnLS.Selected.Value="Mechanic Name","shlrf_mechanicname",drpdwnsortcolumnLS.Selected.Value="Contract No.","shlrf_contractnumber",drpdwnsortcolumnLS.Selected.Value="Lead Tracking No.","shlrf_leadtrackingnumber",drpdwnsortcolumnLS.Selected.Value="Building Name","shlrf_buildingname",drpdwnsortcolumnLS.Selected.Value="Address","shlrf_address",drpdwnsortcolumnLS.Selected.Value="Lead Status","shlrf_leadstatus"),If(icnsortLS.Icon=Icon.ArrowDown,SortOrder.Descending,icnsortLS.Icon=Icon.ArrowUp,SortOrder.Ascending)
                             )
                         Layout: =Layout.Vertical
                         LayoutMinHeight: =287
