--- a/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadListScreen.fx.yaml
@@ -269,7 +269,7 @@ LeadListScreen As screen:
                     Y: =25
                     ZIndex: =2
 
-            Container4 As groupContainer.manualLayoutContainer:
+            ctnnoteLS As groupContainer.manualLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
                 FillPortions: =0
                 Height: =60
@@ -278,7 +278,7 @@ LeadListScreen As screen:
                 Width: =Parent.Width
                 ZIndex: =2
 
-                Label3 As label:
+                lblnoteLS As label:
                     Color: =RGBA(116, 116, 116, 1)
                     Height: =50
                     Text: |-
